Migrate to purified-protos

--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "fs-extra": "^9.0.0",
     "ini": "^1.3.5",
     "node-fetch": "^2.6.1",
-    "protobufjs": "^6.10.1"
+    "purified-protos": "^0.189.0"
   }
 }
