--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "dependencies": {
     "fs-extra": "^9.1.0",
     "node-fetch": "^2.6.1",
-    "purified-protos": "^0.195.0"
+    "pogo-protos": "github:Furtif/pogo-protos"
   }
 }
