--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -10,44 +10,37 @@ on:
         required: false
 
 jobs:
-  Sync:
+  sync:
     runs-on: ubuntu-latest
+    name: Check For Changes
     steps:
-      - name: Checkout code
-        id: checkout-code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 2
       - name: Setup Node.js environment
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
           cache: 'npm'
-      - name: Configure git
-        run: |
-          git config --global user.name "turtlesocks-bot"
-          git config --global user.email "turtlesocks-bot@users.noreply.github.com"
-      - name: Get changed files
-        id: changed-files
-        uses: tj-actions/changed-files@v32
-        with:
-          files: |
-            custom-invasions.json
-            master-latest-basics.json
-            master-latest-chuck.json
-            master-latest-everything.json
-            master-latest-poracle.json
-            master-latest-raw.json
-            master-latest-rdm.json
-            master-latest-rdmopole2.json
-            master-latest-react-map.json
-            master-latest.json
       - name: Generate Stuff
-        if: steps.changed-files.outputs.any_changed == 'true'
         run: |
           npm install
           npm upgrade pogo-data-generator
           npm start
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 2
+      - name: Get changed files
+        id: changed-files-specific
+        uses: tj-actions/changed-files@v34
+        with:
+          files: |
+            ./*.json
+      - name: Configure git
+        if: steps.changed-files-specific.outputs.any_changed == 'true'
+        run: |
+          git config --global user.name "turtlesocks-bot"
+          git config --global user.email "turtlesocks-bot@users.noreply.github.com"
+      - name: Generate Stuff
+        if: steps.changed-files-specific.outputs.any_changed == 'true'
+        run: |
           git add --all
           git commit --message "Hourly Sync"
           git push
