--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,8 +1,8 @@
-name: Sync Hourly
+name: Sync Daily
 
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 0 * * *'
   workflow_dispatch:
     inputs:
       recipe:
@@ -27,19 +27,11 @@ jobs:
           npm install
           npm upgrade pogo-data-generator
           npm start
-      - name: Get changed files
-        id: changed-files-specific
-        uses: tj-actions/changed-files@v34
-        with:
-          files: |
-            ./*.json
       - name: Configure git
-        if: steps.changed-files-specific.outputs.any_changed == 'true'
         run: |
           git config --global user.name "turtlesocks-bot"
           git config --global user.email "turtlesocks-bot@users.noreply.github.com"
       - name: Generate Stuff
-        if: steps.changed-files-specific.outputs.any_changed == 'true'
         run: |
           git add --all
           git commit --message "Hourly Sync"
