--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           npm install
           npm upgrade pogo-data-generator
-          npm upgrade pogo-protos
+          npm upgrade @na-ji/pogo-protos
           npm start
       - name: Check for changes
         run: |
